refactor: Consolidate JSON validation schemas to single version
Replace the axon module's V1 and V2 schemas with the service module's V2 schema content as the new V1. This removes the CssApplication schema, flattens the common/2/ subdirectory into common/, and updates all test payloads and schema version references accordingly.

The X-Schema-Version header is retained (defaulting to 1) to allow future schema versioning without a contract change.